<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Time2Eat</string>
    <string name="my_location">查看我的当前位置</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="demo_name_location">定位图层展示</string>
    <string name="demo_title_location">定位图层展示——LocationOverlayDemo</string>
    <string name="locations">附近餐馆</string>
    <string name="orderdate">请选择就餐日期</string>
    <string name="ordertime">请选择就餐时间</string>
    <string name="phonenumber">记住手机号码</string>
    <string name="peoplenumber">请输入就餐人数</string>
    <string name="orderdish">提前点菜</string>
    <string name="yesorderBtn">确定订座</string>
    <string name="way">获取路线</string>
    <string name="inviteFriends">邀请好友</string>
    <string name="res_icon">餐馆图标</string>
    <string name="menu_icon">菜品图标</string>
    <string name="nfc_prompt">请将手机贴近NFC设备</string>

</resources>